# user-service

./: Cargo.toml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2021-11-21-141630_create_users/: down.sql  up.sql
proto/: authentication.proto  user.proto
src/: Dockerfile  authentication_service.rs  items.proto  main.rs  models.rs  schema.rs
src/authentication_service/: email_identity_service.rs  mod.rs  token_service.rs
src/authentication_service/handler/: change_password.rs  forgot_password.rs  login.rs  me.rs  mod.rs  register.rs
src/models/: email_identities.rs  mod.rs  users.rs
src/user_service/: mod.rs  token_service.rs
src/user_service/handler/: login.rs  me.rs  register.rs
