[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.8.2"}
prost = "0.11.0"
tokio = { version = "1.13.0" , features = ["macros", "rt-multi-thread"]}
diesel = { version = "2.0.0", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "=0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"]}
r2d2 = "0.8.9"
tonic-web = "0.4.0"
tracing-subscriber = {version = "0.3.2", features = ["tracing-log"]}
rust-argon2 = "1.0.0"
futures = "0.3.18"
rand = "0.8.4"
serde = { version= "1.0.130", features = ["derive"]}
branca = "0.10.0"
rmp-serde = "1.0.0-beta.2"
regex = "1"

[build-dependencies]
tonic-build = {version= "0.8.2", features = ["prost"]}